--- a/Fultura_E-port.html
+++ b/Fultura_E-port.html
@@ -18,12 +18,12 @@ h2  {color: Purple;text-align:center;}
 <hr> 
 <hr>
 <h2>OAP</h2>
-<img src="13.png" alt="" height="600" width="800"> <hr>
-<img src="12.png" alt="musical" height="600" width="800"> <hr>
-<img src="14.png" alt="musical" height="600" width="800"> <hr>
-<img src="15.png" alt="musical" height="600" width="800"> <hr>
-<img src="17.png" alt="musical" height="600" width="800"> <hr>
-<img src="16.png" alt="musical" height="600" width="800"> <hr>
+<img src="13.png" alt="oap" height="600" width="800"> <hr>
+<img src="12.png" alt="oap" height="600" width="800"> <hr>
+<img src="14.png" alt="oap" height="600" width="800"> <hr>
+<img src="15.png" alt="oap" height="600" width="800"> <hr>
+<img src="17.png" alt="oap" height="600" width="800"> <hr>
+<img src="16.png" alt="oap" height="600" width="800"> <hr>
 <hr>
 <hr>
 <h2> **<<>>LESSONS!<<>>** </h2>
@@ -43,7 +43,7 @@ h2  {color: Purple;text-align:center;}
 <a href="https://3rdquarterportfolio.neocities.org/LESSON%204%20WHILELOOP.HTML"> <p><b> WHILELOOP<b> </p> </a>
 <a href="https://3rdquarterportfolio.neocities.org/LESSON%204%20DOWHILELOOP.HTML"> <p><b> DOWHILELOOP<b> </p> </a>
 <hr>
-<img src="https://media.tenor.com/u2soLy14DNUAAAAj/don-quixote-limbus-company.gif" alt="TEAM WAHOOO" class="center" >
+<img src="https://scontent.fmnl40-2.fna.fbcdn.net/v/t1.15752-9/482775872_454847147623168_3105907555171837715_n.jpg?stp=dst-jpg_s480x480_tt6&_nc_cat=108&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeEQbUEiBDILTqbx60uVm_WyL64EnwjN70YvrgSfCM3vRihpQ6DKsJBgwlO8pDgBngAYdvChDbkyKkEmoVI5CPUP&_nc_ohc=QquNCTdbiXwQ7kNvgE5biz0&_nc_oc=Adh2I5mUZsiKdBj9RUu-lGbsRYjcRewGYcvIbt5gVh_xSD6pNebQRlSSWqnaKIDuTzE&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl40-2.fna&oh=03_Q7cD1wFL8AmpqfkxOtT8DON8Q9ibG8V1NWoKwOqzFoxwR0v0AQ&oe=67FE6666" alt="valentines bb" class="center" >
 <br>
 3rdquarterportfolio.neocities.org
 </head>
