--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@ h2  {color: Purple;text-align:center;}
 <h1> 4TH QUARTER PORTFOLIO</h1>
 <hr>
 <a href="https://relia2745.github.io/Reyal-not-fakeh/E-portfolio.html?fbclid=IwY2xjawJDcvpleHRuA2FlbQIxMAABHXGLZjw8U2WYLh8wR559f-EsN9VhFrF18GeQWK537uL45v-KeVovkAaU1Q_aem_bnGwwpqumTpK894_dVp6cA" style="font-size:50px;">1st QTR. Portfolio (Files may not work)</a><br>
-<a href="https://portfolio2ndqtr.neocities.org/" style="font-size:50px;">Visit 2nd qtr portfolio!</a>
 <p style="text-align:center;">Good Day, I'm Rio Gien A. Fultura and I welcome you to my E-Portfolio.<br> I love Choi Seung Hyun <3 </p>
 <img src="https://scontent.fmnl40-2.fna.fbcdn.net/v/t1.15752-9/475372722_634097599565507_5672117299759161275_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeEFkbFAiYwjMkEd15uqpFx52jmqDS4BvHLaOaoNLgG8cu22RLgEbUsXcwX2Dc_b-5Mq87rc5uEXcAo_QYE6X025&_nc_ohc=V6c-fYYFF2gQ7kNvgFDgAmN&_nc_oc=Adgsg62OrV6Zz9IghZDhC1_tcH9CHvzcvhIm4CVtqcBQwE1Css81A-qPwndwk0GfjhQ&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl40-2.fna&oh=03_Q7cD1wHxoR0Dvn__g6DUrnObIJQ_rFzvOUH3XwQQQh5NUo_JpQ&oe=67FE34B8" alt="me" height="600" width="600">
 <iframe src="https://drive.google.com/file/d/1kUOAZEcCvD8od0cEjcrmUZA8K1phYM2b/preview" width="640" height="480" allow="autoplay"></iframe>
 <hr> 
 <hr>
 <h2>OAP</h2>
-<img src="13.png" alt="" height="600" width="800"> <hr>
-<img src="12.png" alt="musical" height="600" width="800"> <hr>
-<img src="14.png" alt="musical" height="600" width="800"> <hr>
-<img src="15.png" alt="musical" height="600" width="800"> <hr>
-<img src="17.png" alt="musical" height="600" width="800"> <hr>
-<img src="16.png" alt="musical" height="600" width="800"> <hr>
+<img src="13.png" alt="oap" height="600" width="800"> <hr>
+<img src="12.png" alt="oap" height="600" width="800"> <hr>
+<img src="14.png" alt="oap" height="600" width="800"> <hr>
+<img src="15.png" alt="oap" height="600" width="800"> <hr>
+<img src="17.png" alt="oap" height="600" width="800"> <hr>
+<img src="16.png" alt="oap" height="600" width="800"> <hr>
 <hr>
 <hr>
 <h2> **<<>>LESSONS!<<>>** </h2>
@@ -44,7 +43,7 @@ h2  {color: Purple;text-align:center;}
 <a href="https://3rdquarterportfolio.neocities.org/LESSON%204%20WHILELOOP.HTML"> <p><b> WHILELOOP<b> </p> </a>
 <a href="https://3rdquarterportfolio.neocities.org/LESSON%204%20DOWHILELOOP.HTML"> <p><b> DOWHILELOOP<b> </p> </a>
 <hr>
-<img src="https://media.tenor.com/u2soLy14DNUAAAAj/don-quixote-limbus-company.gif" alt="TEAM WAHOOO" class="center" >
+<img src="https://scontent.fmnl40-2.fna.fbcdn.net/v/t1.15752-9/482775872_454847147623168_3105907555171837715_n.jpg?stp=dst-jpg_s480x480_tt6&_nc_cat=108&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeEQbUEiBDILTqbx60uVm_WyL64EnwjN70YvrgSfCM3vRihpQ6DKsJBgwlO8pDgBngAYdvChDbkyKkEmoVI5CPUP&_nc_ohc=QquNCTdbiXwQ7kNvgE5biz0&_nc_oc=Adh2I5mUZsiKdBj9RUu-lGbsRYjcRewGYcvIbt5gVh_xSD6pNebQRlSSWqnaKIDuTzE&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent.fmnl40-2.fna&oh=03_Q7cD1wFL8AmpqfkxOtT8DON8Q9ibG8V1NWoKwOqzFoxwR0v0AQ&oe=67FE6666" alt="Valentines bb" class="center" >
 <br>
 3rdquarterportfolio.neocities.org
 </head>
